-- Fixed a bug that rendered the trend image the wrong width, thus throwing off the frequency viewers

--- a/src/css/frequencyViewer.css
+++ b/src/css/frequencyViewer.css
@@ -6,6 +6,7 @@
     font-size: 12px;
     padding-top: 30px;
     width:100%;
+    height: 90%;
 }
 
 .frequency-left, .frequency-right {
