--- a/src/css/trendImageViewer.css
+++ b/src/css/trendImageViewer.css
@@ -21,6 +21,10 @@ g.brush.horizontal > .handle {
     height: 40%;
 }
 
+.proteinFamilyViewer {
+    height: 20%;
+}
+
 text.mono {
     font-size: 8px;
     font-family: monospace;
